sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: '<-' expected but '=' found.
    for(i=getNombreValeurs-2; i>-1; i--){
         ^AlgBubbleSort2:7: error: illegal start of simple expression
    for(i=getNombreValeurs-2; i>-1; i--){
                            ^AlgBubbleSort2:7: error: '<-' expected but ';' found.
    for(i=getNombreValeurs-2; i>-1; i--){
                                  ^AlgBubbleSort2:7: error: illegal start of simple pattern
    for(i=getNombreValeurs-2; i>-1; i--){
                                       ^AlgBubbleSort2:15: error: illegal start of simple expression
  }
  ^